# git-proxy-mcp

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  JOURNAL.md  README.md  SECURITY.md  STYLE.md  TODO.md  features.json
.claude/: CLAUDE.md  INSTRUCTIONS.md  JOURNAL.md
.claude/commands/: core.md  devops.md  do_next_todo.md  docs.md  linux.md  macos.md  qa.md  security.md  windows.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: cleanup-caches.js
.github/workflows/: cache_cleanup.yml  ci_main.yml  ci_pr.yml  ci_pr_validation.yml  cleanup_caches.yml  markdown_lint.yml  markdown_lint_main.yml  markdown_lint_pr.yml  release.yml
config/: example-config.json
docs/: errors.md
src/: error.rs  lib.rs  main.rs
src/auth/: credentials.rs  matcher.rs  mod.rs
src/config/: mod.rs  settings.rs
src/git/: command.rs  executor.rs  mod.rs  sanitiser.rs
src/mcp/: mod.rs  protocol.rs  server.rs  transport.rs
src/security/: audit.rs  guards.rs  mod.rs  rate_limit.rs
tests/: git_integration.rs  large_output_tests.rs  mcp_git_pipeline_tests.rs  mcp_integration.rs  security_tests.rs
